# blue-pencil

./: .gitignore  LICENSE  README.md  input.txt  pyproject.toml
blue-pencil/: __main__.py  disasemble.py  find_and_censor.py  finder.py
blue_pencil/: __main__.py  disasemble.py  find_and_censor.py
src/: disasemble.py  process.md
