[build-system]
requires = ["flit_core >=3.2,<4","pdf2image","pypdf2"]
build-backend = "flit_core.buildapi"

[project]
name = "pdf_anonymizer"
authors = [{name = "Gonçalo Ferreira & Rui Braga"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
