[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "blue_pencil"
authors = [{name = "Gonçalo Ferreira & Rui Braga"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "pytesseract",
    "spacy",
    "pdf2image",
    "pypdf",
    "argparse",
    "fpdf"
]
